# dotdrop

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Pipfile  README.md  _config.yml  bootstrap.sh  check-syntax.sh  check-unittests.sh  config.toml  config.yaml  dotdrop.sh  index.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-doc.sh  test-ng.sh  test-syntax.sh  test-unittest.sh  tests-requirements.txt  tests.sh
.github/: FUNDING.yml  codecov.yml
completion/: README.md  _dotdrop-completion.zsh  _dotdrop.sh-completion.zsh  dotdrop-completion.bash  dotdrop.fish  dotdrop.sh-completion.bash  generate.sh
docs/: README.md  config-actions.md  config-config.md  config-details.md  config-dotfiles.md  config-dynvars.md  config-file.md  config-format.md  config-profiles.md  config-transformations.md  config-uservars.md  config-variables.md  config.md  contributing.md  getting-started.md  index.md  installation.md  repository-setup.md  templating.md  usage.md
dotdrop/: __init__.py  action.py  cfg_aggregator.py  cfg_yaml.py  comparator.py  config.py  dictparser.py  dotdrop.py  dotfile.py  exceptions.py  ftree.py  importer.py  installer.py  jhelpers.py  linktypes.py  logger.py  options.py  profile.py  settings.py  templategen.py  uninstaller.py  updater.py  utils.py  variable.py  version.py
highlighters/: README.md
manpage/: dotdrop.1  dotdrop.txt  dotdrop.txt2man  generate.sh
scripts/: change-link.py  change_link.py  check-doc.sh  check-syntax.sh  check-tests-ng.sh  check-unittests.sh  yaml-toml.py  (+5 more)
(+233 files in other folders)
